[gd_scene load_steps=29 format=2]

[ext_resource path="res://Textures/Tilesets/Jungle/Jungle_Green_16.png" type="Texture" id=1]
[ext_resource path="res://Scripts/RidingPlatform.gd" type="Script" id=2]
[ext_resource path="res://Textures/Tilesets/Jungle/Jungle_Green_14.png" type="Texture" id=3]
[ext_resource path="res://Textures/Tilesets/Jungle/Jungle_Green_08.png" type="Texture" id=4]
[ext_resource path="res://Textures/Tilesets/Jungle/Jungle_Green_13.png" type="Texture" id=5]
[ext_resource path="res://Textures/Tilesets/Jungle/Jungle_Green_15.png" type="Texture" id=6]
[ext_resource path="res://Textures/Items/Levers/lever_05_02.png" type="Texture" id=7]
[ext_resource path="res://Textures/Items/Levers/lever_05_01.png" type="Texture" id=8]
[ext_resource path="res://Textures/Items/Levers/lever_05_03.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 101, 83 )

[sub_resource type="Animation" id=2]
resource_name = "Activate"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Deactivate"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Is_Active"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Is_Neutral"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Not_Active"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "Slide_Left_1750"
length = 15.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1664, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Slide_Left_256"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -256, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Slide_Right_2496"
length = 15.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1980, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Un_Slide_Left_1750"
length = 15.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1664, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Un_Slide_Left_256"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -256, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Un_Slide_Right_2496"
length = 15.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1980, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -500 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -600 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=16]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=17]
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -300 ), Vector2( 0, 0 ) ]
}

[node name="Platform_5" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Platform_5" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 7

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Platform_5"]
position = Vector2( 64, 19.5 )
polygon = PoolVector2Array( -63, -19, -29.5, 18.5, 216.5, 18.5, 255, -48, 255, -121, 193, -121, 193, -18.5 )

[node name="A1" type="TextureRect" parent="Platform_5"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 6 )
expand = true

[node name="B1" type="TextureRect" parent="Platform_5"]
margin_left = 64.0
margin_right = 128.0
margin_bottom = 64.0
texture = ExtResource( 1 )
expand = true
flip_h = true

[node name="C1" type="TextureRect" parent="Platform_5"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
texture = ExtResource( 1 )
expand = true
flip_h = true

[node name="D1" type="TextureRect" parent="Platform_5"]
margin_left = 192.0
margin_right = 256.0
margin_bottom = 64.0
texture = ExtResource( 1 )
expand = true
flip_h = true

[node name="E-2" type="TextureRect" parent="Platform_5"]
margin_left = 256.0
margin_top = -128.0
margin_right = 320.0
margin_bottom = -64.0
texture = ExtResource( 4 )
expand = true
flip_v = true

[node name="E-1" type="TextureRect" parent="Platform_5"]
margin_left = 256.0
margin_top = -64.0
margin_right = 320.0
texture = ExtResource( 5 )
expand = true

[node name="E1" type="TextureRect" parent="Platform_5"]
margin_left = 256.0
margin_right = 320.0
margin_bottom = 64.0
texture = ExtResource( 3 )
expand = true

[node name="Lever" type="Node2D" parent="Platform_5"]
position = Vector2( 231.5, -45 )
scale = Vector2( 0.25, 0.25 )

[node name="Area2D" type="Area2D" parent="Platform_5/Lever"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform_5/Lever/Area2D"]
position = Vector2( 1, -3 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Platform_5/Lever"]
rotation = -1.5708
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platform_5/Lever"]
anims/Activate = SubResource( 2 )
anims/Deactivate = SubResource( 3 )
anims/Is_Active = SubResource( 5 )
anims/Is_Neutral = SubResource( 7 )
anims/Not_Active = SubResource( 6 )
anims/RESET = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Platform_5")
anims/RESET = SubResource( 12 )
anims/Slide_Left_1750 = SubResource( 18 )
anims/Slide_Left_256 = SubResource( 8 )
anims/Slide_Right_2496 = SubResource( 10 )
anims/Static = SubResource( 13 )
anims/Un_Slide_Left_1750 = SubResource( 19 )
anims/Un_Slide_Left_256 = SubResource( 9 )
anims/Un_Slide_Right_2496 = SubResource( 11 )
anims/Up_Down_1000 = SubResource( 14 )
anims/Up_Down_1200 = SubResource( 15 )
anims/Up_Down_50 = SubResource( 16 )
anims/Up_Down_600 = SubResource( 17 )

[connection signal="body_entered" from="Platform_5/Lever/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Platform_5/Lever/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="animation_finished" from="Platform_5/Lever/AnimationPlayer" to="." method="_on_Lever_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_Platform_AnimationPlayer_animation_finished"]
